--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hicaro",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "node main.js"
   },
