--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "node main.js"
+    "build": "node main.mjs"
   },
   "dependencies": {
     "ejs": "^3.1.9"
