feat(ci): building static website before uploading it to GitHub Pages

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,6 +27,18 @@ jobs:
       - name: Listing all files and directories
         run: | 
           ls -la
+      - name: Set Node.js 19.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 19.x
+      - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
+      - name: Build production bundle
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
@@ -34,7 +46,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
           path: './public'
       - name: Deploy to GitHub Pages
         id: deployment
