fix(ci): listing everything in `public` folder after build command

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -58,6 +58,10 @@ jobs:
         run: |
           cd public
 
+      - name: Listing all files and directories after running build command for debugging purposes
+        run: |
+          ls -la
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
