--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -24,11 +24,6 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Set Node.js 19.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 19.x
-
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -38,19 +33,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: "."
-
-      - name: Run install
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: install
-
-      - name: Build production bundle
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: build
+          path: "./public"
 
       - name: Deploy to GitHub Pages
         id: deployment
-        working-directory: ./public
         uses: actions/deploy-pages@v2
