--- a/config.json
+++ b/config.json
@@ -4,5 +4,8 @@
     "name": "Hícaro Dânrlley",
     "picture": "assets/images/me.png",
     "role": "Software engineer"
+  },
+  "home": {
+    "photo": "./assets/images/me_2.jpeg"
   }
 }
