feat(website): adding favicon (Fixed #9)

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "site": { "title": "Hícaro Dânrlley" },
+  "site": { "favicon": "assets/images/me.png", "title": "Hícaro Dânrlley" },
   "profile": {
     "name": "Hícaro Dânrlley",
     "picture": "assets/images/me.png",
