--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "type": "module",
   "scripts": {
     "build": "ENVIRON=local node main.js",
-    "build:prod": "ENVIRON=prod node main.js",
-    "prepare": "husky install"
+    "build:prod": "ENVIRON=prod node main.js"
   },
   "dependencies": {
     "ejs": "^3.1.9"
-  },
-  "devDependencies": {
-    "husky": "^8.0.0"
   }
 }
