--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "role": "Software engineer"
   },
   "home": {
-    "photo": "./assets/images/me_2.jpeg"
+    "photo": "assets/images/me_2.jpeg"
   },
   "posts": [
     {
