--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "ENVIRON=local node main.js",
+    "serve": "yarn build:local && http-server ./_public",
+    "build:local": "ENVIRON=local node main.js",
     "build:prod": "ENVIRON=prod node main.js"
   },
   "dependencies": {
-    "ejs": "^3.1.9"
+    "ejs": "^3.1.9",
+    "global": "^4.4.0"
   }
 }
