--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "type": "module",
   "scripts": {
     "serve:debug": "yarn build:debug && http-server ./_public",
+    "serve:prod": "http-server",
     "build:debug": "ENVIRON=debug node main.js",
     "build:prod": "ENVIRON=prod node main.js"
   },
   "dependencies": {
     "ejs": "^3.1.9",
     "global": "^4.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0"
   }
 }
