feat(ci): adding `public` directory if it is untracked

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Push
         run: |
+          if [ $(git status --untracked-files=normal | grep "public/" --count) -ge 1 ]; then git add public; fi
           git commit -m "ci: deploying latest changes (${{ github.run_number}})" .
           git push origin master
 
