--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,8 +47,10 @@ jobs:
       - name: Push
         run: |
           if [ $(git status --untracked-files=normal | grep "public/" --count) -ge 1 ]; then git add public; fi
-          if [ $(dirname -- $(git diff --name-only) | grep "public" --count) -ge 1 ]; then git commit -m "ci: deploying latest changes (${{ github.run_number}})" . ; fi
-          git push origin master
+          if [ $(dirname -- $(git diff --name-only) | grep "public" --count) -ge 1 ]; then \
+              git commit -m "ci: deploying latest changes (${{ github.run_number}})" . ; \
+              git push origin master; \
+          fi
 
   deploy:
     needs: build
