--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Push
         run: |
           if [ $(git status --untracked-files=normal | grep "public/" --count) -ge 1 ]; then git add public; fi
-          if [ $(dirname -- $(git diff --name-only) | grep "public" --count) -ge 1 ]; then \
+          if [ $(dirname -- $(git diff --staged --name-only) | grep "public/" --count) -ge 1 ]; then \
               git commit -m "ci: deploying latest changes (${{ github.run_number}})" . ; \
               git push origin master; \
           fi
