--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,10 +46,12 @@ jobs:
 
       - name: Push
         run: |
-          if [ $(git status --untracked-files=normal | grep "public/" --count) -ge 1 ]; then git add public; fi
+          if [ $(git status --untracked-files=normal | grep "public/" --count) -ge 1 ]; then \
+              git add public ; \
+          fi
           if [ $(dirname -- $(git diff --staged --name-only) | grep "public/" --count) -ge 1 ]; then \
               git commit -m "ci: deploying latest changes (${{ github.run_number}})" . ; \
-              git push origin master; \
+              git push origin master ; \
           fi
 
   deploy:
@@ -69,7 +71,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: "./public"
+          path: "public"
 
       - name: Deploy to GitHub Pages
         id: deployment
