--- a/config.json
+++ b/config.json
@@ -21,5 +21,27 @@
       "file": "_posts/my-second-post.html",
       "tags": ["cpp"]
     }
+  ],
+  "visibility": [
+    {
+      "item": "Resume",
+      "path": "resume.html",
+      "prod": true
+    },
+    {
+      "item": "Projects",
+      "path": "projects.html",
+      "prod": true
+    },
+    {
+      "item": "Blog",
+      "path": "blog.html",
+      "prod": false
+    },
+    {
+      "item": "CV",
+      "path": "cv.html",
+      "prod": false
+    }
   ]
 }
